feat: add media styles

--- a/src/content/examples.yaml
+++ b/src/content/examples.yaml
@@ -161,7 +161,7 @@ layout:
           align: center
           className: max-w-3xl text-white
     section:
-      className: bg-gradient-to-br from-indigo-500 via-purple-500 to-pink-500
+      className: gradient-default
 
   - type: logoMarquee
     items:
