feat: add shuffle-text component

--- a/src/content/examples.yaml
+++ b/src/content/examples.yaml
@@ -10,7 +10,7 @@ layout:
     variant: highImpact
     media:
       src: /assets/images/hero-background.png
-    title: Example Components
+    title: Example {{ render(ShuffleText, ['Components', 'Blocks', 'Layouts', 'Styles']) }}
     subtitle: Lorem Ipsum is simply dummy text of the _printing and typesetting industry_. **Lorem Ipsum** has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
     actions:
       - type: button
