--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "change-case": "^5.4.4",
@@ -39,33 +39,34 @@
     "rehype-slug": "^6.0.0",
     "remark-flexible-toc": "^1.1.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
-    "remeda": "^2.19.0",
+    "remeda": "^2.20.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@types/node": "^20.17.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/unist": "^3.0.3",
     "copy-webpack-plugin": "^12.0.2",
-    "eslint": "^9",
+    "eslint": "^9.20.1",
     "eslint-config-next": "15.1.4",
     "file-loader": "^6.2.0",
     "m3-tokens": "^0.0.3",
-    "postcss": "^8",
+    "postcss": "^8.5.2",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.6",
     "tsx": "^4.19.2",
-    "typescript": "^5",
+    "typescript": "^5.7.3",
     "yaml-loader": "^0.8.1",
     "zod-to-json-schema": "^3.24.1"
   }
