--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "coverage": "vitest run --coverage",
+    "dev": "next dev",
     "lint": "next lint",
-    "schema": "tsx tools/build-schema.ts"
+    "schema": "tsx tools/build-schema.ts",
+    "start": "next start",
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -34,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-slug": "^6.0.0",
@@ -53,21 +56,34 @@
     "@eslint/eslintrc": "^3.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/postcss": "^4.0.6",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/unist": "^3.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "3.0.5",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.4",
     "file-loader": "^6.2.0",
+    "jsdom": "^26.0.0",
     "m3-tokens": "^0.0.3",
     "postcss": "^8.5.2",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^4.0.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.5",
     "yaml-loader": "^0.8.1",
     "zod-to-json-schema": "^3.24.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
