feat: refactor file loading to a simple database, add file saving and simple editor

--- a/src/content/examples.yaml
+++ b/src/content/examples.yaml
@@ -4,7 +4,7 @@ announcementBar:
       #startDate: 2025-01-24T00:00:00Z
       #endDate: 2025-01-25T23:59:59Z
 header:
-  theme: dark
+  theme: light
 layout:
   - type: hero
     variant: highImpact
