--- a/src/content/mobile.yaml
+++ b/src/content/mobile.yaml
@@ -2,6 +2,7 @@ layout:
   - type: hero
     variant: mediumImpact
     media:
+      type: image
       src: /assets/images/tyto-for-mobile-hero.svg
     title: |
       Manage your office from your pocket
@@ -78,6 +79,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: Real-time progress updates
     content: Delegate and prioritize the work of your team members, all in real-time.
@@ -90,6 +92,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: Chat to team members
     content: Working from home doesn't have to mean an end to collaboration. We believe collaboration thrives through transparency. That's why we baked it in from the start, allowing teams to be anywhere, yet feel more connected than ever.
@@ -101,6 +104,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: Where is my team spending their time?
     content: Working from home doesn't have to mean an end to collaboration. We believe collaboration thrives through transparency. That's why we baked it in from the start, allowing teams to be anywhere, yet feel more connected than ever.
@@ -113,6 +117,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: Am I interrupting?
     content: Working from home doesn't have to mean an end to collaboration. We believe collaboration thrives through transparency. That's why we baked it in from the start, allowing teams to be anywhere, yet feel more connected than ever.
@@ -124,6 +129,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: How far is Bob with his task?
     content: Working from home doesn't have to mean an end to collaboration. We believe collaboration thrives through transparency. That's why we baked it in from the start, allowing teams to be anywhere, yet feel more connected than ever.
@@ -136,6 +142,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: Set clear priorities
     content: Set your team up for success by setting organized, weekly, clear objectives— then leaving your team to get on with it, instead of pacing around the office, annoying everyone— like some kind of wild animal.
@@ -147,6 +154,7 @@ layout:
 
   - type: featureBox
     media:
+      type: image
       src: placeholder
     title: Let your team fly
     content: With Tyto, your team will be working more efficiently than ever before. Get through tasks, capture ideas and deploy them in an organized, fun and efficient manner.
@@ -162,6 +170,7 @@ layout:
       - content:
           type: testimonial
           media:
+            type: image
             src: placeholder
           title: Pavel Popovichenko
           subtitle: Early Adopter
@@ -169,6 +178,7 @@ layout:
       - content:
           type: testimonial
           media:
+            type: image
             src: placeholder
           title: Gregg Richardson
           subtitle: Early Adopter
@@ -176,6 +186,7 @@ layout:
       - content:
           type: testimonial
           media:
+            type: image
             src: placeholder
           title: Adré Micha Hassen
           subtitle: Liberty Life
