--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.473.0",
+    "motion": "^12.4.7",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
