build: tweak scripts to get prepare working

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "ci": "pnpm check-format && pnpm dist && pnpm check-exports",
-    "copy-css": "npx copyfiles -u 1 \"src/index.css\" dist",
+    "copy-css": "copyfiles -u 1 \"src/index.css\" dist",
     "check-exports": "attw --pack .",
     "schema": "tsx tools/build-schema.ts",
     "start": "next start",
     "test": "vitest",
-    "dist": "pnpm exec tsc -p ./tsconfig.dist.json && pnpm exec tsc-alias -p ./tsconfig.dist.json && pnpm dist:css && pnpm schema",
-    "dist:css": "npx postcss-cli ./src/index.css -o ./dist/index.css --env production",
+    "dist": "tsc -p ./tsconfig.dist.json && tsc-alias -p ./tsconfig.dist.json && pnpm dist:css && pnpm schema",
+    "dist:css": "postcss ./src/index.css -o ./dist/index.css --env production",
     "prepare": "pnpm dist"
   },
   "type": "module",
@@ -46,6 +46,7 @@
     "motion": "^12.4.7",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
+    "postcss-cli": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -62,8 +63,8 @@
     "remeda": "^2.20.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tsc": "^2.0.4",
     "tsc-alias": "^1.8.11",
+    "typescript": "^5.7.3",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "yaml": "^2.7.0",
@@ -91,8 +92,6 @@
     "postcss": "^8.5.2",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^4.0.6",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5",
     "yaml-loader": "^0.8.1",
