--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "site-builder",
   "version": "0.1.2",
-  "private": true,
   "scripts": {
     "build": "next build",
     "coverage": "vitest run --coverage",
@@ -11,7 +10,7 @@
     "check-format": "prettier --check .",
     "ci": "pnpm check-format && pnpm dist && pnpm check-exports",
     "copy-css": "copyfiles -u 1 \"src/index.css\" dist",
-    "check-exports": "attw --pack .",
+    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
     "schema": "tsx tools/build-schema.ts",
     "start": "next start",
     "test": "vitest",
@@ -35,8 +34,13 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
+    "@types/node": "^20.17.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/unist": "^3.0.3",
     "change-case": "^5.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,6 +50,7 @@
     "motion": "^12.4.7",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
+    "postcss": "^8.5.2",
     "postcss-cli": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -62,25 +67,23 @@
     "remark-rehype": "^11.1.1",
     "remeda": "^2.20.1",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "tsc-alias": "^1.8.11",
     "typescript": "^5.7.3",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "yaml": "^2.7.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.1"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.17.4",
     "@eslint/eslintrc": "^3.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@tailwindcss/postcss": "^4.0.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@types/unist": "^3.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "3.0.5",
     "copy-webpack-plugin": "^12.0.2",
@@ -88,14 +91,10 @@
     "eslint-config-next": "15.1.4",
     "file-loader": "^6.2.0",
     "jsdom": "^26.0.0",
-    "m3-tokens": "^0.0.3",
-    "postcss": "^8.5.2",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5",
-    "yaml-loader": "^0.8.1",
-    "zod-to-json-schema": "^3.24.1"
+    "yaml-loader": "^0.8.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
