--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "tsc-alias": "^1.8.11",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
