--- a/package.json
+++ b/package.json
@@ -95,5 +95,10 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5",
     "yaml-loader": "^0.8.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
