--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -11,9 +11,10 @@
 
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "jsx": "react-jsx",
 
     "declaration": true,
     "sourceMap": true,
