--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "schema": "tsx tools/build-schema.ts",
     "start": "next start",
     "test": "vitest",
-    "dist": "tsc -p ./tsconfig.dist.json && tsc-alias -p ./tsconfig.dist.json && pnpm dist:css && pnpm schema",
+    "dist": "tsc -p ./tsconfig.dist.json && tsc-alias -p ./tsconfig.dist.json && npm run dist:css && npm run schema",
     "dist:css": "postcss ./src/index.css -o ./dist/index.css --env production",
-    "prepare": "pnpm dist"
+    "prepare": "npm run dist"
   },
   "type": "module",
   "main": "dist/index.js",
