--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "start": "next start",
     "//dist": "npm run schema & node scripts/esbuild.js & npm run dist:css",
     "//dist:css": "postcss ./src/index.css -o ./dist/index.css --env production",
-    "//prepare": "npm run dist",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run ci",
     "test": "vitest"
   },
