--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": "MIT",
   "scripts": {
     "//build": "next build",
-    "build": "npm run build:ts & npm run build:css",
+    "build": "concurrently \"npm run build:ts\" \"npm run build:css\"",
     "build:ts": "tsc",
     "build:css": "postcss src/index.css -o ./dist/index.css",
     "ci": "npm run build && npm run check-format && npm run check-exports && npm run test",
@@ -83,7 +83,6 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.28.1",
-    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -100,7 +99,6 @@
     "lucide-react": "^0.477.0",
     "motion": "^12.4.10",
     "next-themes": "^0.4.4",
-    "react-hook-form": "^7.54.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
@@ -122,6 +120,7 @@
     "@arethetypeswrong/cli": "^0.17.4",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
+    "@hookform/resolvers": "^4.1.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/postcss": "^4.0.11",
     "@testing-library/dom": "^10.4.0",
@@ -146,6 +145,7 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwindcss": "4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2",
@@ -155,7 +155,8 @@
   "peerDependencies": {
     "next": "^15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
