--- a/package.json
+++ b/package.json
@@ -67,6 +67,10 @@
       "import": "./dist/utils/index.js"
     },
     "./index.css": "./dist/index.css",
+    "./nextjs-plugin": {
+      "types": "./dist/site-builder-nextjs-plugin.d.ts",
+      "default": "./dist/site-builder-nextjs-plugin.js"
+    },
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
@@ -127,6 +131,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.8",
     "concurrently": "^9.1.2",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.2.1",
     "eslint-plugin-react": "^7.37.4",
@@ -144,7 +149,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.8",
+    "webpack": "^5.98.0"
   },
   "peerDependencies": {
     "next": "^15.2.1",
